--- a/step_definitions/Steps_parse_steps.cls
+++ b/step_definitions/Steps_parse_steps.cls
@@ -19,25 +19,24 @@ Public Sub Given_a_step_is_defined_as_STR_2925BEC1427D(example_context As TConte
     example_context.set_value step_expressions(1), "gherkin_text"
 End Sub
 
-Public Sub Given_an_example_with_a_step_STR_2AA83F29F0BD(example_context As TContext, step_expressions As Collection)
-    'Given an example with a step {string}
-    example_context.set_value New TExample, "example"
-    example_context.get_value("example").Steps.Add TFeatureParser.create_step(step_expressions(1))
-End Sub
-
-Public Sub Given_another_step_is_defined_as_STR_F14E826F5231(example_context As TContext, step_expressions As Collection)
-    'Given another step is defined as {string}
-    example_context.set_value step_expressions(1), "gherkin_text"
+Public Sub Given_a_list_of_steps_STR_D7FEE94DD01B(example_context As TContext, step_expressions As Collection)
+    'Given a list of steps {string}
+    'TODO refactor stepexpression to remove escape characters the right way
+    Dim step_list_gherkin As String
+    
+    step_list_gherkin = Replace(step_expressions(1), "\", "")
+    example_context.set_value step_list_gherkin, "gherkin_text"
 End Sub
 
 Public Sub When_the_step_definition_is_parsed_8240391A8855(example_context As TContext)
     'When the step definition is parsed
-    example_context.set_value TFeatureParser.create_step(example_context.get_value("gherkin_text")), "step"
+    example_context.set_value TStepParser.parse_step_line(example_context.get_value("gherkin_text"), New Collection), "step"
 End Sub
 
-Public Sub When_the_step_definition_is_parsed_as_part_of_this_E03DC3C99405(example_context As TContext)
-    'When the step definition is parsed as part of this example
-    example_context.set_value TFeatureParser.create_step(example_context.get_value("gherkin_text"), example_context.get_value("example")), "step"
+Public Sub When_the_step_list_is_parsed_8C8F753FF01F(example_context As TContext)
+    'When the step list is parsed
+    example_context.set_value New Collection, "step_list"
+    TStepParser.parse_steps_new example_context.get_value("gherkin_text"), 0, example_context.get_value("step_list")
 End Sub
 
 Public Sub Then_the_type_of_the_step_is_set_to_STR_3EC12192CDA4(example_context As TContext, step_expressions As Collection)
@@ -50,3 +49,12 @@ Public Sub Then_the_name_of_the_step_is_STR_47BC4E071438(example_context As TCon
     TSpec.expect(example_context.get_value("step").name).to_be step_expressions(1)
 End Sub
 
+Public Sub Then_the_type_of_step_INT_is_set_to_STR_3EC1B545CDA4(example_context As TContext, step_expressions As Collection)
+    'Then the type of step {integer} is set to {string}
+    Dim step_list As Collection
+    Dim step As TStep
+    
+    Set step_list = example_context.get_value("step_list")
+    Set step = step_list(step_expressions(1) - 1)
+    TSpec.expect(step.SType).to_be step_expressions(2)
+End Sub
