--- a/step_definitions/Steps_report_verbose.cls
+++ b/step_definitions/Steps_report_verbose.cls
@@ -24,11 +24,6 @@ Public Sub Given_an_example_STR_was_reported_9C2B7078D5AE(example_context As TCo
     example_context.get_value("session").Reporter.report REPORT_MSG_TYPE_EXAMPLE_TITLE, "Example: " & step_expressions(1)
 End Sub
 
-Public Sub Given_a_description_line_STR_6B57E8EB7A49(example_context As TContext, step_expressions As Collection)
-    'Given a description line {string}
-    example_context.set_value step_expressions(1), "gherkin_text"
-End Sub
-
 Public Sub When_a_step_STR_followed_by_a_docstring_STR_is_rep_8C80B341FF25(example_context As TContext, step_expressions As Collection)
     'When a step {string} followed by a docstring {string} is reported with status {string}
     Dim step_name As String
@@ -42,9 +37,27 @@ Public Sub When_the_execution_of_the_first_example_step_is_re_7D6F60A0AA78(examp
     example_context.get_value("session").Reporter.report REPORT_MSG_TYPE_STEP, "Given sample step", STATUS_OK
 End Sub
 
-Public Sub When_the_description_line_is_formatted_417E5E95BA43(example_context As TContext)
-    'When the description line is formatted
-    example_context.set_value example_context.get_value("session").Reporter.Report_Formatter.format_feature_description(example_context.get_value("gherkin_text")), "report_output"
+Public Sub When_the_execution_of_the_feature_is_reported_7A6F8A00CA5C(example_context As TContext)
+    'When the execution of the feature is reported
+    Dim parsed_feature As TFeature
+    Dim session As TSession
+    
+    Set session = example_context.get_value("session")
+    Set parsed_feature = TFeatureParser.parse_feature_new(example_context.get_value("gherkin_text"))
+    example_context.set_value parsed_feature, "parsed_feature"
+    session.Reporter.report REPORT_MSG_TYPE_FEATURE_NAME, parsed_feature.name
+    session.Reporter.report REPORT_MSG_TYPE_DESC, parsed_feature.description
+End Sub
+
+Public Sub When_the_example_is_reported_with_the_step_result__F52F4459A058(example_context As TContext, step_expressions As Collection)
+    'And the example is reported with the step result {string}
+    Dim example As TExample
+    Dim session As TSession
+    
+    Set session = example_context.get_value("session")
+    Set example = example_context.get_value("parsed_feature").sections(1)
+    session.Reporter.report REPORT_MSG_TYPE_EXAMPLE_TITLE, example.OriginalHeadline
+    session.Reporter.report REPORT_MSG_TYPE_STEP, example.steps(1).OriginalStepDefinition, step_expressions(1), vbNullString
 End Sub
 
 Public Sub Then_the_report_output_contains_STR_5A8ED3F2F3C6(example_context As TContext, step_expressions As Collection)
@@ -57,15 +70,30 @@ Public Sub Then_the_report_output_doesnt_contain_STR_77804E212494(example_contex
     TSpec.expect(example_context.get_value("session").Reporter.ConsoleOutput).does_not_include step_expressions(1)
 End Sub
 
-Public Sub Then_the_description_is_reported_as_STR_CA847D5BC6A5(example_context As TContext, step_expressions As Collection)
-    'Then the description is reported as {string}
-    TSpec.expect(example_context.get_value("report_output")).to_be step_expressions(1)
-End Sub
-
 Public Sub Then_line_INT_of_the_resulting_output_is_STR_A434511445AD(example_context As TContext, step_expressions As Collection)
     'Then line {integer} of the resulting output is {string}
     Dim lines As Variant
     
     lines = Split(example_context.get_value("session").Reporter.ConsoleOutput, vbLf)
     TSpec.expect(lines(step_expressions(1) - 1)).to_be step_expressions(2)
+End Sub
+
+Public Sub Then_the_report_ouput_is_STR_7C9B2337A6D0(example_context As TContext, step_expressions As Collection)
+    'Then the report ouput is {string}
+    Dim session As TSession
+    Dim report_lines As Variant
+    Dim expected_lines As Variant
+    Dim trimmed_output As String
+    Dim lines As Variant
+    Dim line As Variant
+    
+    Set session = example_context.get_value("session")
+    trimmed_output = vbNullString
+    lines = Split(session.Reporter.ConsoleOutput, vbLf)
+    For Each line In lines
+        If trimmed_output <> vbNullString Then trimmed_output = trimmed_output & vbLf
+        trimmed_output = trimmed_output & Trim(line)
+    Next
+    'Debug.Print session.Reporter.ConsoleOutput
+    TSpec.expect(ExtraVBA.trim_linebreaks(trimmed_output)).to_be step_expressions(1)
 End Sub
