--- a/step_definitions/Steps_Run_Examples.cls
+++ b/step_definitions/Steps_Run_Examples.cls
@@ -11,12 +11,12 @@ Option Explicit
 
 Public Sub Given_an_example_with_matching_step_implementation_B7CBC6F3337F(example_context As TContext, step_expressions As Collection)
     'Given an example with matching step implementations {string}
-    example_context.set_value TFeatureParser.parse_feature_new(step_expressions(1)), "parsed_feature"
+    example_context.set_value TFeatureParser.parse_feature(step_expressions(1)), "parsed_feature"
 End Sub
 
 Public Sub Given_an_feature_with_one_example_with_3_steps_whe_B4401525657E(example_context As TContext)
     'Given an feature with one example with 3 steps where the 2nd step fails
-    example_context.set_value TFeatureParser.parse_feature_new( _
+    example_context.set_value TFeatureParser.parse_feature( _
                     "Feature: sample feature" & vbLf & _
                     vbLf & _
                     "  Example: sample example" & vbLf & _
@@ -42,7 +42,7 @@ Public Sub When_the_example_is_executed_8C8F015690BC(example_context As TContext
     
     Set feature_runner = New TFeatureRunner
     If Not example_context.value_exists("parsed_feature") Then
-        Set parsed_feature = TFeatureParser.parse_feature_new(example_context.get_value("gherkin_text"))
+        Set parsed_feature = TFeatureParser.parse_feature(example_context.get_value("gherkin_text"))
     Else
         Set parsed_feature = example_context.get_value("parsed_feature")
     End If
