--- a/step_definitions/Steps_make_steps_executable.cls
+++ b/step_definitions/Steps_make_steps_executable.cls
@@ -16,7 +16,7 @@ Public Sub When_the_function_name_for_the_last_step_is_calcul_3D1B9F9C0F3D(examp
     Dim last_step As TStep
     
     example_context.set_value "Feature: sample" & vbLf & example_context.get_value("gherkin_text"), "gherkin_text"
-    Set feature = TFeatureParser.parse_feature_new(example_context.get_value("gherkin_text"))
+    Set feature = TFeatureParser.parse_feature(example_context.get_value("gherkin_text"))
     Set example = feature.sections(1)
     Set last_step = example.steps(example.steps.Count)
     example_context.set_value last_step.get_step_function_name, "step_function_name"
