--- a/source/TReportFormatterVerbose.cls
+++ b/source/TReportFormatterVerbose.cls
@@ -80,11 +80,11 @@ Public Function format_step(step_name As String, status As String, err_msg As St
     formatted_msg = Space$(4) & " " & status & Space$(10 - 1 - Len(status)) & step_lines(0)
     'format docstring output if available
     If UBound(step_lines) > 0 Then
-        'formatted_msg = formatted_msg & vbLf & Space$(16) & Trim(step_lines(1))
-        For line_index = 1 To UBound(step_lines)
-            formatted_msg = formatted_msg & vbLf & Space$(18) & Trim(step_lines(line_index))
+        formatted_msg = formatted_msg & vbLf & Space$(16) & Trim(step_lines(1))
+        For line_index = 2 To UBound(step_lines) - 1
+            formatted_msg = formatted_msg & vbLf & Space$(18) & step_lines(line_index)
         Next
-        'formatted_msg = formatted_msg & vbLf & Space$(16) & Trim(step_lines(UBound(step_lines)))
+        formatted_msg = formatted_msg & vbLf & Space$(16) & Trim(step_lines(UBound(step_lines)))
     End If
     'add err msg if available
     If err_msg <> vbNullString Then
@@ -103,8 +103,7 @@ End Function
 
 Public Function format_parse_error(err_msg As String, err_description As String) As String
     format_parse_error = "Error: " & err_msg & vbLf _
-                             & err_description
-'                            & Space$(2) & err_description
+                            & Space$(2) & err_description
 End Function
 
 Public Function format_feature_description(description As String) As String
